globus-xio-udt-driver (1.22-1+gt6.@distro@) @distro@; urgency=low

  * Allow building using the RHEL 6 version of libnice

 -- Globus Toolkit <support@globus.org>  Thu, 02 Jun 2016 13:24:33 -0400

globus-xio-udt-driver (1.21-1+gt6.@distro@) @distro@; urgency=low

  * add GLOBUS_XIO_UDT_STUNSERVER env override

 -- Globus Toolkit <support@globus.org>  Wed, 25 May 2016 13:59:37 -0500

globus-xio-udt-driver (1.20-2+gt6.@distro@) @distro@; urgency=low

  * Update debian dependencies

 -- Globus Toolkit <support@globus.org>  Thu, 28 Apr 2016 07:26:56 -0400

globus-xio-udt-driver (1.20-1+gt6.@distro@) @distro@; urgency=low

  * Don't configure glib2 during unpack

 -- Globus Toolkit <support@globus.org>  Wed, 27 Apr 2016 17:22:52 -0400

globus-xio-udt-driver (1.19-3+gt6.@distro@) @distro@; urgency=low

  * Rename binary package from libglobus-xio-gridftp-driver1 to
    libglobus-xio-gridftp-driver since it is an unversioned shared object

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 08:47:39 -0500

globus-xio-udt-driver (1.19-2+gt6.@distro@) @distro@; urgency=low

  * Dependency changes for libselinux and liblzma for ubuntu wily

 -- Globus Toolkit <support@globus.org>  Thu, 22 Oct 2015 09:56:58 -0400

globus-xio-udt-driver (1.19-1+gt6.@distro@) @distro@; urgency=low

  * ignore other end's attempts at ipv6 negotiation

 -- Globus Toolkit <support@globus.org>  Mon, 21 Sep 2015 14:22:45 -0500

globus-xio-udt-driver (1.18-1+gt6.@distro@) @distro@; urgency=low

  * don't attempt ice negotiation over ipv6 while udt driver does not support ipv6

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 13:30:27 -0500

globus-xio-udt-driver (1.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix error checking and automake warning

 -- Globus Toolkit <support@globus.org>  Mon, 15 Jun 2015 21:31:33 -0400

globus-xio-udt-driver (1.16-2+gt6.@distro@) @distro@; urgency=low

  * Add support for debian squeeze and ubuntu lucid
